err/configcollector.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Cryptodome'...
Listing './lib/python3.5/site-packages/Cryptodome/Cipher'...
Listing './lib/python3.5/site-packages/Cryptodome/Hash'...
Listing './lib/python3.5/site-packages/Cryptodome/IO'...
Listing './lib/python3.5/site-packages/Cryptodome/Math'...
Listing './lib/python3.5/site-packages/Cryptodome/Protocol'...
Listing './lib/python3.5/site-packages/Cryptodome/PublicKey'...
Listing './lib/python3.5/site-packages/Cryptodome/Random'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Cipher'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Cipher/test_vectors'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Cipher/test_vectors/AES'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Cipher/test_vectors/TDES'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors/BLAKE2b'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors/BLAKE2s'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors/SHA3'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors/keccak'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/IO'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Math'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Protocol'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/PublicKey'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/PublicKey/test_vectors'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/PublicKey/test_vectors/ECC'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Random'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors/DSA'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors/ECDSA'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors/PKCS1-PSS'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors/PKCS1-v1.5'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Util'...
Listing './lib/python3.5/site-packages/Cryptodome/Signature'...
Listing './lib/python3.5/site-packages/Cryptodome/Util'...
Listing './lib/python3.5/site-packages/Exscript'...
Listing './lib/python3.5/site-packages/Exscript/emulators'...
Listing './lib/python3.5/site-packages/Exscript/interpreter'...
Listing './lib/python3.5/site-packages/Exscript/parselib'...
Listing './lib/python3.5/site-packages/Exscript/protocols'...
Listing './lib/python3.5/site-packages/Exscript/protocols/drivers'...
Listing './lib/python3.5/site-packages/Exscript/servers'...
Listing './lib/python3.5/site-packages/Exscript/stdlib'...
Listing './lib/python3.5/site-packages/Exscript/util'...
Listing './lib/python3.5/site-packages/Exscript/workqueue'...
Listing './lib/python3.5/site-packages/Exscript-2.5.7.dist-info'...
Listing './lib/python3.5/site-packages/PyNaCl-1.2.1.dist-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/bcrypt-3.1.4.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/configcollector'...
Compiling './lib/python3.5/site-packages/configcollector/configcollector.py'...
***   File "./lib/python3.5/site-packages/configcollector/configcollector.py", line 44
    print 'Accessing router: ' + router_info[num]['hostname'] + '...'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/configcollector-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/nacl'...
Listing './lib/python3.5/site-packages/nacl/bindings'...
Listing './lib/python3.5/site-packages/nacl/pwhash'...
Listing './lib/python3.5/site-packages/paramiko'...
Listing './lib/python3.5/site-packages/paramiko-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/pycryptodomex-3.4.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
